feat: add header and main

--- a/index.html
+++ b/index.html
@@ -1,20 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav class="navigation">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>mdickynovaldi.com</title>
+    <meta
+      name="description"
+      content="Selamat datang di portfolio online saya! Di sini, Anda dapat menemukan berbagai proyek dan karya yang telah saya kerjakan. Terima kasih telah mengunjungi situs saya!"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navigation">
         <ul class="menu">
-            <li class="menu-item"><a class="menu-link" href="#home">Beranda</a></li>
-            <li class="menu-item"><a class="menu-link" href="#portfolio">Portofolio</a></li>
-            <li class="menu-item"><a class="menu-link" href="#about">Tentang</a></li>
-            <li class="menu-item"><a class="menu-link" href="#contact">Kontak</a></li>
+          <li class="menu-item">
+            <img
+              src="https://www.shutterstock.com/shutterstock/photos/2436502437/display_1500/stock-photo-image-d-illustration-for-uiux-web-app-presentation-etc-2436502437.jpg"
+              alt=""
+              style="width: 30px"
+            />
+          </li>
+          <li class="menu-item">Moch Dicky Novaldi</li>
+          <li class="menu-item">
+            <a class="menu-link" href="#home">Beranda</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#portfolio">Portofolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#about">Tentang</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#contact">Kontak</a>
+          </li>
         </ul>
-    </nav>
-    
-</body>
+      </nav>
+    </header>
+
+    <main>
+      <div class="layout-main-container">
+        <ul class="icon contact">
+          <li>
+            <a href="https://linkedin.com/in/mochdickynovaldi">
+              <img
+                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                alt="Instagram"
+                style="width: 30px"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://linkedin.com/in/mochdickynovaldi">
+              <img
+                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                alt="LinkedIn"
+                style="width: 30px"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://linkedin.com/in/mochdickynovaldi">
+              <img
+                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                alt="Github"
+                style="width: 30px"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://linkedin.com/in/mochdickynovaldi">
+              <img
+                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                alt="Upwork"
+                style="width: 30px"
+              />
+            </a>
+          </li>
+        </ul>
+        <div class="main-info">
+          <h1 class="main-info-title">👋 Hi, Im Dicky Novaldi</h1>
+          <p class="main-info-sub-title">
+            a fullstack web developer from Indonesia. I specialize in website
+            development and also have expertise in creating 2D/3D games, as well
+            as developing Augmented Reality (AR) and Virtual Reality (VR)
+            experiences. I'm passionate about delivering creative and innovative
+            solutions in every project I work on.
+          </p>
+          <a href="#about" class="main-info-button"> Hire me! </a>
+          <aside class="main-photo">
+            <picture>
+              <img
+                src="/assets/profile.JPG"
+                alt="Moch Dicky Novaldi"
+                width="50%"
+                height="50%"
+              />
+            </picture>
+          </aside>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
