feat: add meta author and meta keywords

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>mdickynovaldi.com</title>
     <meta
       name="description"
-      content="Selamat datang di portfolio online saya! Di sini, Anda dapat menemukan berbagai proyek dan karya yang telah saya kerjakan. Terima kasih telah mengunjungi situs saya!"
+      content="Welcome to my online portfolio! Here, you can find various projects and works that I have done. Thank you for visiting my site!"
     />
+    <meta name="author" content="Moch Dicky Novaldi" />
+    <meta name="keywords" content="Moch Dicky Novaldi, portfolio, web design, software development, augmented reality, virtual reality" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
