fix missing closing body text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       content="Welcome to my online portfolio! Here, you can find various projects and works that I have done. Thank you for visiting my site!"
     />
     <meta name="author" content="Moch Dicky Novaldi" />
-    <meta name="keywords" content="Moch Dicky Novaldi, portfolio, web design, software development, augmented reality, virtual reality" />
+    <meta
+      name="keywords"
+      content="Moch Dicky Novaldi, portfolio, web design, software development, augmented reality, virtual reality"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -103,4 +106,5 @@
         </div>
       </div>
     </main>
+  </body>
 </html>
