feat: refine html structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mdickynovaldi.com</title>
+    <title>Moch Dicky Novaldi</title>
     <meta
       name="description"
       content="Welcome to my online portfolio! Here, you can find various projects and works that I have done. Thank you for visiting my site!"
@@ -21,9 +21,10 @@
         <ul class="menu">
           <li class="menu-item">
             <img
-              src="https://www.shutterstock.com/shutterstock/photos/2436502437/display_1500/stock-photo-image-d-illustration-for-uiux-web-app-presentation-etc-2436502437.jpg"
-              alt=""
-              style="width: 30px"
+              alt="Logo Moch Dicky Novaldi"
+              src="assets/logo-mdickynovaldi.png"
+              width="30"
+              height="30"
             />
           </li>
           <li class="menu-item">Moch Dicky Novaldi</li>
@@ -44,67 +45,79 @@
     </header>
 
     <main>
-      <div class="layout-main-container">
-        <ul class="icon contact">
-          <li>
-            <a href="https://linkedin.com/in/mochdickynovaldi">
-              <img
-                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                alt="Instagram"
-                style="width: 30px"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://linkedin.com/in/mochdickynovaldi">
-              <img
-                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                alt="LinkedIn"
-                style="width: 30px"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://linkedin.com/in/mochdickynovaldi">
-              <img
-                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                alt="Github"
-                style="width: 30px"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="https://linkedin.com/in/mochdickynovaldi">
-              <img
-                src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                alt="Upwork"
-                style="width: 30px"
-              />
-            </a>
-          </li>
-        </ul>
-        <div class="main-info">
-          <h1 class="main-info-title">👋 Hi, Im Dicky Novaldi</h1>
-          <p class="main-info-sub-title">
-            a fullstack web developer from Indonesia. I specialize in website
-            development and also have expertise in creating 2D/3D games, as well
-            as developing Augmented Reality (AR) and Virtual Reality (VR)
-            experiences. I'm passionate about delivering creative and innovative
-            solutions in every project I work on.
-          </p>
-          <a href="#about" class="main-info-button"> Hire me! </a>
-          <aside class="main-photo">
-            <picture>
-              <img
-                src="/assets/profile.JPG"
-                alt="Moch Dicky Novaldi"
-                width="50%"
-                height="50%"
-              />
-            </picture>
-          </aside>
+      <section class="hero">
+        <div class="intro">
+          <h1 class="intro-title">👋 Hi, Im Dicky Novaldi</h1>
+          <p class="intro-subtitle">Full Stack Web Developer</p>
         </div>
-      </div>
+
+        <p class="description">
+          I live in 🇮🇩Indonesia. I specialize in website development and also
+          have expertise in creating 2D/3D games, as well as developing
+          Augmented Reality (AR) and Virtual Reality (VR) experiences. I'm
+          passionate about delivering creative and innovative solutions in every
+          project I work on.
+        </p>
+
+        <div class="flex">
+          <a href="https://linkedin.com/in/mdickynovaldi" class="hero-button">
+            Hire me!
+          </a>
+          <ul class="icon contact">
+            <li>
+              <a
+                href="https://linkedin.com/in/mdickynovaldi"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                  alt="Instagram"
+                  style="width: 30px"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com/in/mochdickynovaldi">
+                <img
+                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                  alt="LinkedIn"
+                  style="width: 30px"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com/in/mochdickynovaldi">
+                <img
+                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                  alt="GitHub"
+                  style="width: 30px"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="https://linkedin.com/in/mochdickynovaldi">
+                <img
+                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
+                  alt="Upwork"
+                  style="width: 30px"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <aside class="main-photo">
+          <picture>
+            <img
+              src="/assets/profile.jpg"
+              alt="Moch Dicky Novaldi"
+              width="50%"
+              height="50%"
+            />
+          </picture>
+        </aside>
+      </section>
     </main>
   </body>
 </html>
