feat: change image names

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <aside class="main-photo">
           <picture>
             <img
-              src="/assets/profile.jpg"
+              src="/assets/photo-mdickynovaldi.jpg"
               alt="Moch Dicky Novaldi"
               width="50%"
               height="50%"
