fix: html conflict

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
     </header>
 
     <main>
+      <div class="main-container">
+        <div class="main-info"></div>
+      </div>
+    </main>
+
+    <main>
       <section class="hero">
         <div class="intro">
           <h1 class="intro-title">👋 Hi, Im Dicky Novaldi</h1>
@@ -110,7 +116,7 @@
         <aside class="main-photo">
           <picture>
             <img
-              src="/assets/photo-mdickynovaldi.jpg"
+              src="/assets/profile.jpg"
               alt="Moch Dicky Novaldi"
               width="50%"
               height="50%"
