--- a/index.html
+++ b/index.html
@@ -19,15 +19,23 @@
     <header>
       <nav class="navigation">
         <ul class="menu">
+          <!-- <li>
+            <a href="#home">
+              <li class="menu-item-mdickynovaldi">Moch Dicky Novaldi</li>
+            </a>
+          </li> -->
+
           <li class="menu-item">
-            <img
-              alt="Logo Moch Dicky Novaldi"
-              src="assets/logo-mdickynovaldi.png"
-              width="30"
-              height="30"
-            />
+            <a class="menu-link" href="#home"
+              ><img
+                src="assets/logo-inovasiin.png"
+                alt="logo inovasiin"
+                width="20"
+                height="15"
+              />
+              mdickynovaldi</a
+            >
           </li>
-          <li class="menu-item">Moch Dicky Novaldi</li>
           <li class="menu-item">
             <a class="menu-link" href="#home">Beranda</a>
           </li>
@@ -45,78 +53,79 @@
     </header>
 
     <main>
-      <div class="main-container">
-        <div class="main-info"></div>
-      </div>
-    </main>
-
-    <main>
       <section class="hero">
-        <div class="intro">
-          <h1 class="intro-title">👋 Hi, Im Dicky Novaldi</h1>
-          <p class="intro-subtitle">Full Stack Web Developer</p>
+        <div class="hero-div">
+          <div class="intro">
+            <h1 class="intro-title">👋 Hi, Im Dicky Novaldi</h1>
+            <p class="intro-subtitle">Full Stack Web Developer</p>
+          </div>
+
+          <p class="description">
+            I live in 🇮🇩Indonesia. I specialize in website development and also
+            have expertise in creating 2D/3D games, as well as developing
+            Augmented Reality (AR) and Virtual Reality (VR) experiences. I'm
+            passionate about delivering creative and innovative solutions in
+            every project I work on.
+          </p>
+
+          <div class="flex">
+            <a class="hero-button" href="https://linkedin.com/in/mdickynovaldi">
+              Hire me!
+            </a>
+            <ul class="icon-hero">
+              <li>
+                <a
+                  href="https://instagram.com/mochdickynovaldi"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="assets/icon-instagram.png"
+                    alt="Instagram"
+                    style="width: 20px"
+                  />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://linkedin.com/in/mochdickynovaldi"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img
+                    src="assets/icon-linkedin.png"
+                    alt="LinkedIn"
+                    style="width: 20px"
+                  />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://github.com/mdickynovaldi"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                ></a>
+                <img src="assets/icon-github.png" alt="github" />
+              </li>
+              <li>
+                <a
+                  href="https://www.upwork.com/freelancers/~01c8be6ac3d616888a?mp_source=share"
+                >
+                  <img
+                    src="assets/icon-upwork.png"
+                    alt="Upwork"
+                    style="width: 20px"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
-        <p class="description">
-          I live in 🇮🇩Indonesia. I specialize in website development and also
-          have expertise in creating 2D/3D games, as well as developing
-          Augmented Reality (AR) and Virtual Reality (VR) experiences. I'm
-          passionate about delivering creative and innovative solutions in every
-          project I work on.
-        </p>
-
-        <div class="flex">
-          <a href="https://linkedin.com/in/mdickynovaldi" class="hero-button">
-            Hire me!
-          </a>
-          <ul class="icon contact">
-            <li>
-              <a
-                href="https://linkedin.com/in/mdickynovaldi"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <img
-                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                  alt="Instagram"
-                  style="width: 30px"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="https://linkedin.com/in/mochdickynovaldi">
-                <img
-                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                  alt="LinkedIn"
-                  style="width: 30px"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="https://linkedin.com/in/mochdickynovaldi">
-                <img
-                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                  alt="GitHub"
-                  style="width: 30px"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="https://linkedin.com/in/mochdickynovaldi">
-                <img
-                  src="https://image.shutterstock.com/image-vector/linkedin-icon-260nw-1060140916.jpg"
-                  alt="Upwork"
-                  style="width: 30px"
-                />
-              </a>
-            </li>
-          </ul>
-        </div>
-
-        <aside class="main-photo">
+        <aside class="hero-photo">
           <picture>
             <img
-              src="/assets/profile.jpg"
+              src="/assets/photo-mdickynovaldi.jpg"
               alt="Moch Dicky Novaldi"
               width="50%"
               height="50%"
@@ -124,6 +133,46 @@
           </picture>
         </aside>
       </section>
+      <section class="portfolio">
+        <div class="portfolio-container">
+          <h2>Portfolio</h2>
+          <div class="portfolio-item">
+            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
+            <h3>Project 1</h3>
+            <p>
+              Deskripsi singkat tentang proyek pertama saya. Proyek ini
+              melibatkan pengembangan aplikasi web menggunakan teknologi
+              terbaru.
+            </p>
+            <a href="https://github.com/mdickynovaldi/project1" target="_blank"
+              >See More</a
+            >
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
+            <h3>Project 2</h3>
+            <p>
+              Deskripsi singkat tentang proyek kedua saya. Proyek ini melibatkan
+              pembuatan aplikasi mobile dengan fitur-fitur canggih.
+            </p>
+            <a href="https://github.com/mdickynovaldi/project2" target="_blank"
+              >See More</a
+            >
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
+            <h3>Project 3</h3>
+            <p>
+              Deskripsi singkat tentang proyek ketiga saya. Proyek ini
+              melibatkan pengembangan sistem backend yang skalabel dan aman.
+            </p>
+            <a href="https://github.com/mdickynovaldi/project3" target="_blank"
+              >See More</a
+            >
+          </div>
+        </div>
+      </section>
+      <section class="about"></section>
     </main>
   </body>
 </html>
