--- a/index.html
+++ b/index.html
@@ -123,19 +123,21 @@
         </div>
 
         <aside class="hero-photo">
-          <picture>
-            <img
-              src="/assets/photo-mdickynovaldi.jpg"
-              alt="Moch Dicky Novaldi"
-              width="50%"
-              height="50%"
-            />
-          </picture>
+          <div class="hero-photo2">
+            <picture>
+              <img
+                src="/assets/photo-mdickynovaldi.jpg"
+                alt="Moch Dicky Novaldi"
+                width="50%"
+                height="50%"
+              />
+            </picture>
+          </div>
         </aside>
       </section>
       <section class="portfolio">
         <div class="portfolio-container">
-          <h2>Portfolio</h2>
+          <h2 class="portfolio-title">Portfolio</h2>
           <div class="portfolio-item">
             <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
             <h3>Project 1</h3>
@@ -170,9 +172,64 @@
               >See More</a
             >
           </div>
+          <div class="portfolio-item">
+            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
+            <h3>Project 3</h3>
+            <p>
+              Deskripsi singkat tentang proyek ketiga saya. Proyek ini
+              melibatkan pengembangan sistem backend yang skalabel dan aman.
+            </p>
+            <a href="https://github.com/mdickynovaldi/project3" target="_blank"
+              >See More</a
+            >
+          </div>
         </div>
       </section>
-      <section class="about"></section>
+      <section class="about">
+        <div class="about-div">
+          <div class="intro">
+            <h1 class="intro-title">👋 Hi, Im Dicky Novaldi</h1>
+            <p class="intro-subtitle">Full Stack Web Developer</p>
+          </div>
+
+          <p class="description">
+            I live in 🇮🇩Indonesia. I specialize in website development and also
+            have expertise in creating 2D/3D games, as well as developing
+            Augmented Reality (AR) and Virtual Reality (VR) experiences. I'm
+            passionate about delivering creative and innovative solutions in
+            every project I work on.
+          </p>
+        </div>
+
+        <aside class="about-photo">
+          <picture>
+            <img
+              src="/assets/photo-mdickynovaldi.jpg"
+              alt="Moch Dicky Novaldi"
+              width="50%"
+              height="50%"
+            />
+          </picture>
+        </aside>
+      </section>
+      <section class="contact">
+        <h2 class="contact-title">Contact Me</h2>
+        <form action="https://formspree.io/f/{your_form_id}" method="POST">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+
+          <button type="submit">Submit</button>
+        </form>
+      </section>
+      <footer>
+        <p>copyright by inovasiin</p>
+      </footer>
     </main>
   </body>
 </html>
