--- a/index.html
+++ b/index.html
@@ -18,218 +18,25 @@
   <body>
     <header>
       <nav class="navigation">
-        <ul class="menu">
-          <!-- <li>
-            <a href="#home">
-              <li class="menu-item-mdickynovaldi">Moch Dicky Novaldi</li>
-            </a>
-          </li> -->
+        <div class="navigation-logo">
+          <img
+            src="assets/logo-inovasiin.png"
+            alt="logo inovasiin"
+            width="50"
+            height="50"
+          />
+        </div>
 
-          <li class="menu-item">
-            <a class="menu-link" href="#home"
-              ><img
-                src="assets/logo-inovasiin.png"
-                alt="logo inovasiin"
-                width="20"
-                height="15"
-              />
-              mdickynovaldi</a
-            >
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#home">Beranda</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#portfolio">Portofolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#about">Tentang</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="#contact">Kontak</a>
+        <ul class="navigation-links">
+          <li>
+            <a href="/about">About</a>
           </li>
         </ul>
+
+        <div class="navigation-cta">
+          <a href="/contact">Let's Talk</a>
+        </div>
       </nav>
     </header>
-
-    <main>
-      <section class="hero">
-        <div class="hero-div">
-          <div class="intro">
-            <h1 class="intro-title">👋 Hi, Im Dicky Novaldi</h1>
-            <p class="intro-subtitle">Full Stack Web Developer</p>
-          </div>
-
-          <p class="description">
-            I live in 🇮🇩Indonesia. I specialize in website development and also
-            have expertise in creating 2D/3D games, as well as developing
-            Augmented Reality (AR) and Virtual Reality (VR) experiences. I'm
-            passionate about delivering creative and innovative solutions in
-            every project I work on.
-          </p>
-
-          <div class="flex">
-            <a class="hero-button" href="https://linkedin.com/in/mdickynovaldi">
-              Hire me!
-            </a>
-            <ul class="icon-hero">
-              <li>
-                <a
-                  href="https://instagram.com/mochdickynovaldi"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <img
-                    src="assets/icon-instagram.png"
-                    alt="Instagram"
-                    style="width: 20px"
-                  />
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://linkedin.com/in/mochdickynovaldi"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  <img
-                    src="assets/icon-linkedin.png"
-                    alt="LinkedIn"
-                    style="width: 20px"
-                  />
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://github.com/mdickynovaldi"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                ></a>
-                <img src="assets/icon-github.png" alt="github" />
-              </li>
-              <li>
-                <a
-                  href="https://www.upwork.com/freelancers/~01c8be6ac3d616888a?mp_source=share"
-                >
-                  <img
-                    src="assets/icon-upwork.png"
-                    alt="Upwork"
-                    style="width: 20px"
-                  />
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <aside class="hero-photo">
-          <div class="hero-photo2">
-            <picture>
-              <img
-                src="/assets/photo-mdickynovaldi.jpg"
-                alt="Moch Dicky Novaldi"
-                width="50%"
-                height="50%"
-              />
-            </picture>
-          </div>
-        </aside>
-      </section>
-      <section class="portfolio">
-        <div class="portfolio-container">
-          <h2 class="portfolio-title">Portfolio</h2>
-          <div class="portfolio-item">
-            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
-            <h3>Project 1</h3>
-            <p>
-              Deskripsi singkat tentang proyek pertama saya. Proyek ini
-              melibatkan pengembangan aplikasi web menggunakan teknologi
-              terbaru.
-            </p>
-            <a href="https://github.com/mdickynovaldi/project1" target="_blank"
-              >See More</a
-            >
-          </div>
-          <div class="portfolio-item">
-            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
-            <h3>Project 2</h3>
-            <p>
-              Deskripsi singkat tentang proyek kedua saya. Proyek ini melibatkan
-              pembuatan aplikasi mobile dengan fitur-fitur canggih.
-            </p>
-            <a href="https://github.com/mdickynovaldi/project2" target="_blank"
-              >See More</a
-            >
-          </div>
-          <div class="portfolio-item">
-            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
-            <h3>Project 3</h3>
-            <p>
-              Deskripsi singkat tentang proyek ketiga saya. Proyek ini
-              melibatkan pengembangan sistem backend yang skalabel dan aman.
-            </p>
-            <a href="https://github.com/mdickynovaldi/project3" target="_blank"
-              >See More</a
-            >
-          </div>
-          <div class="portfolio-item">
-            <img class="portfolio-img" src="assets/rangka.png" alt="dicky" />
-            <h3>Project 3</h3>
-            <p>
-              Deskripsi singkat tentang proyek ketiga saya. Proyek ini
-              melibatkan pengembangan sistem backend yang skalabel dan aman.
-            </p>
-            <a href="https://github.com/mdickynovaldi/project3" target="_blank"
-              >See More</a
-            >
-          </div>
-        </div>
-      </section>
-      <section class="about">
-        <div class="about-div">
-          <div class="intro">
-            <h1 class="intro-title">👋 Hi, Im Dicky Novaldi</h1>
-            <p class="intro-subtitle">Full Stack Web Developer</p>
-          </div>
-
-          <p class="description">
-            I live in 🇮🇩Indonesia. I specialize in website development and also
-            have expertise in creating 2D/3D games, as well as developing
-            Augmented Reality (AR) and Virtual Reality (VR) experiences. I'm
-            passionate about delivering creative and innovative solutions in
-            every project I work on.
-          </p>
-        </div>
-
-        <aside class="about-photo">
-          <picture>
-            <img
-              src="/assets/photo-mdickynovaldi.jpg"
-              alt="Moch Dicky Novaldi"
-              width="50%"
-              height="50%"
-            />
-          </picture>
-        </aside>
-      </section>
-      <section class="contact">
-        <h2 class="contact-title">Contact Me</h2>
-        <form action="https://formspree.io/f/{your_form_id}" method="POST">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required />
-
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required />
-
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="4" required></textarea>
-
-          <button type="submit">Submit</button>
-        </form>
-      </section>
-      <footer>
-        <p>copyright by inovasiin</p>
-      </footer>
-    </main>
   </body>
 </html>
