--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       name="keywords"
       content="Moch Dicky Novaldi, portfolio, web design, software development, augmented reality, virtual reality"
     />
+
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -25,18 +32,269 @@
             width="50"
             height="50"
           />
+          <p class="navigation-title">Moch Dicky Novaldi</p>
         </div>
 
         <ul class="navigation-links">
           <li>
+            <a href="/Home">Home</a>
+          </li>
+          <li>
+            <a href="/Portfolio">Portfolio</a>
+          </li>
+          <li>
             <a href="/about">About</a>
+          </li>
+          <li>
+            <a href="/Contact">Contact</a>
           </li>
         </ul>
 
         <div class="navigation-cta">
-          <a href="/contact">Let's Talk</a>
+          <a
+            href="https://linkedin.com/in/mdickynovaldi"
+            target="_blank"
+            rel="noonpener noreferrer"
+            >Let's Talk</a
+          >
+          <img src="assets/arrow.svg" alt="arrow" />
         </div>
       </nav>
     </header>
+    <hr style="border: 1px solid black" />
+    <section class="hero">
+      <div class="hero-title">
+        <h1 class="hero-h1">👋Hi, Im Dicky Novaldi</h1>
+        <p>
+          a fullstack web developer from Indonesia. I specialize in website
+          development and also have expertise in creating 2D/3D games, as well
+          as developing Augmented Reality (AR) and Virtual Reality (VR)
+          experiences. I'm passionate about delivering creative and innovative
+          solutions in every project I work on.
+        </p>
+        <ul class="social-links">
+          <li class="">
+            <a
+              href="https://github.com/mdickynovaldi"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/icons/github.svg"
+                alt="GitHub"
+                width="24"
+                height="24"
+              />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://instagram.com/mochdickynovaldi"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/icons/instagram.svg"
+                alt="Instagram"
+                width="24"
+                height="24"
+              />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://linkedin.com/in/mdickynovaldi"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/icons/linkedin.svg"
+                alt="LinkedIn"
+                width="24"
+                height="24"
+              />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.upwork.com/freelancers/~01c8be6ac3d616888a?mp_source=share"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img
+                src="assets/icons/upwork.svg"
+                alt="Upwork"
+                width="24"
+                height="24"
+              />
+            </a>
+          </li>
+        </ul>
+        <div class="hero-cta">
+          <a
+            href="https://linkedin.com/in/mdickynovaldi"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Hire Me!</a
+          >
+        </div>
+      </div>
+      <div class="hero-image">
+        <img src="assets/photo-mdickynovaldi.jpg" alt="MochDickyNovaldi" />
+      </div>
+    </section>
+    <section class="portfolio">
+      <h1 class="portfolio-title">Portfolio</h1>
+      <div class="portfolio-grid">
+        <div class="portfolio-card">
+          <img
+            src="https://picsum.photos/200/300"
+            alt="Project 1"
+            class="portfolio-image"
+          />
+          <h2 class="portfolio-title">Project 1</h2>
+          <p class="portfolio-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="portfolio-card">
+          <img
+            src="https://picsum.photos/210/300"
+            alt="Project 2"
+            class="portfolio-image"
+          />
+          <h2 class="portfolio-title">Project 2</h2>
+          <p class="portfolio-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="portfolio-card">
+          <img
+            src="https://picsum.photos/220/300"
+            alt="Project 3"
+            class="portfolio-image"
+          />
+          <h2 class="portfolio-title">Project 3</h2>
+          <p class="portfolio-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="portfolio-card">
+          <img
+            src="https://picsum.photos/230/300"
+            alt="Project 4"
+            class="portfolio-image"
+          />
+          <h2 class="portfolio-title">Project 4</h2>
+          <p class="portfolio-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+      </div>
+      <div class="portfolio-cta">
+        <a href="http://" target="_blank" rel="noopener noreferrer"> More</a>
+      </div>
+    </section>
+    <section class="testimoni">
+      <h1 class="testimoni-title">Testimonial</h1>
+      <div class="testimoni-grid">
+        <div class="testimoni-card">
+          <p class="testimoni-text">
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua."
+          </p>
+          <p class="testimoni-author">- John Doe, CEO of Tech Company</p>
+        </div>
+        <div class="testimoni-card">
+          <p class="testimoni-text">
+            "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat."
+          </p>
+          <p class="testimoni-author">- Jane Smith, Project Manager</p>
+        </div>
+        <div class="testimoni-card">
+          <p class="testimoni-text">
+            "Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur."
+          </p>
+          <p class="testimoni-author">- Michael Johnson, Freelance Designer</p>
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <h1 class="about-title">About</h1>
+      <div class="about-div">
+        <div class="about-text">
+          <h1 class="about-text-title">😁 Moch Dicky Novaldi</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <div class="about-image">
+          <img src="assets/photo-mdickynovaldi.jpg" alt="mochdickynovaldi" />
+        </div>
+      </div>
+    </section>
+    <section class="contact">
+      <h1 class="contact-title">Contact</h1>
+      <div class="contact-content">
+        <div class="contact-lottie">
+          <script
+            src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+            type="module"
+          ></script>
+
+          <dotlottie-player
+            src="https://lottie.host/44e7e5a4-ccb7-42c5-a21d-7ce58591c4b6/oUikPokWTU.json"
+            background="transparent"
+            speed="1"
+            style="width: 500px; height: 500px"
+            loop
+            autoplay
+          ></dotlottie-player>
+        </div>
+        <div class="contact-form">
+          <form action="/submit_contact" method="POST">
+            <label for="name" class="contact-label">Name:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              class="contact-input"
+              required
+            />
+
+            <label for="email" class="contact-label">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="contact-input"
+              required
+            />
+
+            <label for="message" class="contact-label">Message:</label>
+            <textarea
+              id="message"
+              name="message"
+              rows="4"
+              class="contact-textarea"
+              required
+            ></textarea>
+
+            <button type="submit" class="contact-button">Submit</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p>Copyright Inovasiin</p>
+    </footer>
   </body>
 </html>
