--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </nav>
     </header>
-    <hr style="border: 1px solid black" />
+    <hr style="border: 1px solid #afafaf" />
     <section class="hero">
       <div class="hero-title">
         <h1 class="hero-h1">👋Hi, Im Dicky Novaldi</h1>
@@ -196,7 +196,7 @@
       </div>
     </section>
     <section class="testimoni">
-      <h1 class="testimoni-title">Testimonial</h1>
+      <h1 class="testimoni-title">testimonial</h1>
       <div class="testimoni-grid">
         <div class="testimoni-card">
           <p class="testimoni-text">
