--- a/index.html
+++ b/index.html
@@ -18,35 +18,37 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav class="navigation">
-        <div class="navigation-logo">
-          <img
-            src="assets/logo-inovasiin.png"
-            alt="logo inovasiin"
-            width="50"
-            height="50"
-          />
-          <p class="navigation-title">Moch Dicky Novaldi</p>
-        </div>
+        <a href="/" class="navigation-logo-link">
+          <div class="navigation-logo">
+            <img
+              src="assets/logo-inovasiin.png"
+              alt="logo inovasiin"
+              width="50"
+              height="50"
+            />
+            <h1 class="navigation-title">Moch Dicky Novaldi</h1>
+          </div>
+        </a>
 
         <ul class="navigation-links">
           <li>
-            <a href="/Home">Home</a>
+            <a href="/">Home</a>
           </li>
           <li>
-            <a href="/Portfolio">Portfolio</a>
+            <a href="/portfolio">Portfolio</a>
           </li>
           <li>
             <a href="/about">About</a>
           </li>
           <li>
-            <a href="/Contact">Contact</a>
+            <a href="/contact">Contact</a>
           </li>
         </ul>
 
@@ -55,13 +57,15 @@
             href="https://linkedin.com/in/mdickynovaldi"
             target="_blank"
             rel="noonpener noreferrer"
-            >Let's Talk</a
+            class="cta-link"
           >
-          <img src="assets/arrow.svg" alt="arrow" />
+            <span>Let's Talk</span>
+            <img src="assets/arrow.svg" alt="arrow" />
+          </a>
         </div>
       </nav>
     </header>
-    <hr style="border: 1px solid #afafaf" />
+
     <section class="hero">
       <div class="hero-title">
         <h1 class="hero-h1">👋Hi, Im Dicky Novaldi</h1>
@@ -130,21 +134,26 @@
             </a>
           </li>
         </ul>
-        <div class="hero-cta">
+
+        <div>
           <a
             href="https://linkedin.com/in/mdickynovaldi"
             target="_blank"
             rel="noopener noreferrer"
-            >Hire Me!</a
+            class="hero-cta"
           >
+            Hire Me!
+          </a>
         </div>
       </div>
       <div class="hero-image">
         <img src="assets/photo-mdickynovaldi.jpg" alt="MochDickyNovaldi" />
       </div>
     </section>
-    <section class="portfolio">
-      <h1 class="portfolio-title">Portfolio</h1>
+
+    <section id="portfolio" class="section">
+      <h1 class="section-title">Portfolio</h1>
+
       <div class="portfolio-grid">
         <div class="portfolio-card">
           <img
@@ -192,37 +201,43 @@
         </div>
       </div>
       <div class="portfolio-cta">
-        <a href="http://" target="_blank" rel="noopener noreferrer"> More</a>
+        <a href="/portfolio" target="_blank" rel="noopener noreferrer"> More</a>
       </div>
     </section>
-    <section class="testimoni">
-      <h1 class="testimoni-title">testimonial</h1>
-      <div class="testimoni-grid">
-        <div class="testimoni-card">
-          <p class="testimoni-text">
+
+    <section class="testimonial">
+      <h1 class="section-title">Testimonial</h1>
+
+      <div class="testimonial-grid">
+        <div class="testimonial-card">
+          <p class="testimonial-text">
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua."
           </p>
-          <p class="testimoni-author">- John Doe, CEO of Tech Company</p>
+          <p class="testimonial-author">- John Doe, CEO of Tech Company</p>
         </div>
-        <div class="testimoni-card">
-          <p class="testimoni-text">
+        <div class="testimonial-card">
+          <p class="testimonial-text">
             "Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat."
           </p>
-          <p class="testimoni-author">- Jane Smith, Project Manager</p>
+          <p class="testimonial-author">- Jane Smith, Project Manager</p>
         </div>
-        <div class="testimoni-card">
-          <p class="testimoni-text">
+        <div class="testimonial-card">
+          <p class="testimonial-text">
             "Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur."
           </p>
-          <p class="testimoni-author">- Michael Johnson, Freelance Designer</p>
+          <p class="testimonial-author">
+            - Michael Johnson, Freelance Designer
+          </p>
         </div>
       </div>
     </section>
+
     <section class="about">
-      <h1 class="about-title">About</h1>
+      <h1 class="section-title">About</h1>
+
       <div class="about-div">
         <div class="about-text">
           <h1 class="about-text-title">😁 Moch Dicky Novaldi</h1>
