feat: refine code quality

--- a/about/index.html
+++ b/about/index.html
@@ -83,33 +83,19 @@
       </div>
       <div class="max-w-screen-xl mx-auto mb-10">
         <p class="text-white mx-auto font-Roboto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-          accusamus a consequuntur ipsa! Maxime recusandae enim soluta excepturi
-          optio ad architecto unde aperiam harum aliquam similique eligendi modi
-          quaerat labore officia rerum quidem blanditiis, ratione omnis amet
-          fuga cupiditate cum ducimus possimus. Neque veniam iusto maxime, iste
-          a aliquam sapiente eum harum provident veritatis ea facilis non libero
-          rem consequatur magnam esse architecto quibusdam! Iste consequatur
-          autem eius dolorum provident asperiores accusantium in quaerat
-          placeat! A doloribus unde repellendus rerum error dicta qui modi
-          consequatur eaque. Quo sequi qui facere recusandae? Dolores
-          dignissimos mollitia commodi atque tempore, similique et, illo omnis
-          quod voluptates quo hic voluptatem, vitae delectus nemo ducimus veniam
-          ea corrupti! Ipsa rerum optio distinctio blanditiis, consequatur eius
-          repellendus. Dolore minus labore porro quam iusto et deleniti
-          reprehenderit quos delectus. Omnis magnam beatae id earum optio quasi
-          iste rem culpa suscipit. Quae corporis quam, delectus magni
-          repudiandae, quis repellendus hic reiciendis ullam accusantium nisi
-          illo vero qui molestiae! Non ut suscipit soluta quisquam nesciunt
-          deleniti cumque quis aperiam numquam odit? Aspernatur expedita a rem
-          beatae voluptatem. Odit eligendi, perferendis saepe, possimus ea, odio
-          mollitia placeat quisquam a quia eveniet veritatis nesciunt explicabo
-          reiciendis esse debitis ullam quam facilis.
+          My name is Moch Dicky Novaldi, I'm a software developer and a
+          freelance web developer. I'm a self-taught developer and I'm very
+          passionate about technology. I'm a quick learner and I'm always
+          looking for new challenges.
         </p>
       </div>
     </section>
     <!-- End of About me -->
 
-    <!--  -->
+    <!-- Footer -->
+    <footer class="bg-slate-900 text-white text-center p-4">
+      <p>&copy; 2023 Moch Dicky Novaldi. All rights reserved.</p>
+    </footer>
+    <!-- End of Footer -->
   </body>
 </html>
