--- a/contact/index.html
+++ b/contact/index.html
@@ -62,7 +62,7 @@
         <h2 class="text-3xl font-bold text-center mb-8 text-white">
           Contact Me
         </h2>
-        <form action="#" method="POST" class="space-y-6">
+        <form action="#" method="POST" class="flex flex-col gap-6">
           <div>
             <label for="name" class="block text-sm font-medium text-white"
               >Name</label
@@ -75,6 +75,7 @@
               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-orange-500 focus:border-orange-500 sm:text-sm"
             />
           </div>
+
           <div>
             <label for="email" class="block text-sm font-medium text-white"
               >Email</label
@@ -87,6 +88,7 @@
               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-orange-500 focus:border-orange-500 sm:text-sm"
             />
           </div>
+
           <div>
             <label for="message" class="block text-sm font-medium text-white"
               >Message</label
@@ -99,16 +101,16 @@
               class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-orange-500 focus:border-orange-500 sm:text-sm"
             ></textarea>
           </div>
-          <div class="text-center">
-            <button
-              type="submit"
-              class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-orange-500 hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500"
-            >
-              Send Message
-            </button>
-          </div>
+
+          <button
+            type="submit"
+            class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-orange-500 hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500"
+          >
+            Send Message
+          </button>
         </form>
       </div>
+
       <div class="block border rounded-xl mx-10 md:hidden">
         <h2 class="text-3xl font-bold text-center mb-8 mt-8 text-white">
           Contact Me
