--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/output.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-slate-900">
     <!-- Navbar -->
