--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
       content="Moch Dicky Novaldi, portfolio, web design, software development, augmented reality, virtual reality"
     />
 
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
+
   <body>
     <header class="header">
       <nav class="navigation">
